policies/constraint templates/eksControlSensitivePermissions.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: ekscontrolsensitivepermissions
spec:
  crd:
    spec:
      names:
        kind: EksControlSensitivePermissions
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package ekscontrolsensitivepermissions

        sensitive_verbs := ["bind", "impersonate", "escalate"]

        violation[{"msg": msg}] {
          role := input.review.object
          rule := role.rules[_]
          verb := rule.verbs[_]
          verb in sensitive_verbs

          msg := sprintf("Role '%s' must not grant sensitive verb '%s'.", [role.metadata.name, verb])
        }
