policies/constraint templates/eksEnforceSecretAccess.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksenforcesecretaccess
spec:
  crd:
    spec:
      names:
        kind: EksEnforceSecretAccess
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksenforcesecretaccess

        allowed_roles := input.parameters.allowedRoles

        violation[{"msg": msg}] {
          role := input.review.object
          not role.metadata.name in allowed_roles

          rule := role.rules[_]
          rule.apiGroups == [""]  # Core API group
          rule.resources[_] == "secrets"
          ("get" in rule.verbs)

          msg := sprintf("Role '%s' grants read access to secrets.", [role.metadata.name])
        }
