policies/constraint templates/eksNoAutomountServiceAccountToken.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksnoautomountserviceaccounttoken
spec:
  crd:
    spec:
      names:
        kind: EksNoAutomountServiceAccountToken
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksnoautomountserviceaccounttoken

        violation[{"msg": msg}] {
          not input.review.object.spec.automountServiceAccountToken == false
          msg := sprintf("Pod '%s' must set 'automountServiceAccountToken' to false.", [input.review.object.metadata.name])
        }
