policies/constraint templates/eksRestrictDefaultServiceAccount.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksrestrictdefaultserviceaccount
spec:
  crd:
    spec:
      names:
        kind: EksRestrictDefaultServiceAccount
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksrestrictdefaultserviceaccount

        violation[{"msg": msg}] {
          sa := input.review.object.spec.serviceAccountName
          sa == "default" or sa == ""
          msg := sprintf("Pod '%s' must not use the default service account.", [input.review.object.metadata.name])
        }
